--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Abel&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./style.css" />
     <link rel="shortcut icon" href="./assets/foguete.png" type="image/x-icon" />
-    <title>@SolDev</title>
+    <title>Social Linking</title>
   </head>
   <body>
     <div id="container">
       <div id="profile">
         <img id="avatar" src="./assets/avatar.png" alt="Avatar" />
-        <div id="name">@SolDev</div>
+        <div id="name">@g-soldera</div>
       </div>
       <div id="switch" onclick="toggleMode()">
         <button></button>
@@ -27,21 +27,29 @@
       <div id="menu">
         <ul>
           <li>
-            <a href="#" target="_blank">Botão 1</a>
+            <a
+              href="https://github.com/g-soldera/social-linking"
+              target="_blank"
+              >Social Linking</a
+            >
           </li>
           <li>
-            <a href="#" target="_blank">Botão 2</a>
+            <a href="https://ionic.io/ionicons" target="_blank">Ionicons</a>
           </li>
           <li>
-            <a href="#" target="_blank">Botão 3</a>
+            <a
+              href="https://tlo.mit.edu/learn-about-intellectual-property/software-and-open-source-licensing/open-source-licensing"
+              target="_blank"
+              >MIT License</a
+            >
           </li>
           <li>
-            <a href="#" target="_blank">Botão 4</a>
+            <a href="https://www.rocketseat.com.br" target="_blank">DevLinks</a>
           </li>
         </ul>
       </div>
       <div id="social-links">
-        <a href="#" target="_blank">
+        <a href="https://github.com/g-soldera" target="_blank">
           <ion-icon class="icon" name="logo-github"></ion-icon>
         </a>
         <a href="#" target="_blank">
@@ -53,7 +61,7 @@
       </div>
       <footer>
         Feito durante o curso
-        <a href="app.rocketseat.com.br/devlinks">DevLinks</a>
+        <a href="https://app.rocketseat.com.br/devlinks">DevLinks</a>
       </footer>
     </div>
     <script src="./script.js"></script>
