--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <a
               href="https://github.com/g-soldera/social-linking"
               target="_blank"
-              >Social Linking</a
+              >Open Source</a
             >
           </li>
           <li>
