--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div id="container">
       <div id="profile">
         <img id="avatar" src="./assets/avatar.png" alt="Avatar" />
-        <div id="name">@g-soldera</div>
+        <div id="name">Gustavo Soldera</div>
       </div>
       <div id="switch" onclick="toggleMode()">
         <button></button>
