--- a/index.html
+++ b/index.html
@@ -55,13 +55,18 @@
         <a href="#" target="_blank">
           <ion-icon class="icon" name="logo-instagram"></ion-icon>
         </a>
-        <a href="https://www.linkedin.com/in/gustavo-soldera-78624418a/" target="_blank">
+        <a
+          href="https://www.linkedin.com/in/gustavo-soldera-78624418a/"
+          target="_blank"
+        >
           <ion-icon class="icon" name="logo-linkedin"></ion-icon>
         </a>
       </div>
       <footer>
         Feito durante o curso
-        <a href="https://app.rocketseat.com.br/devlinks">DevLinks</a>
+        <a href="https://app.rocketseat.com.br/devlinks" target="_blank"
+          >DevLinks</a
+        >
       </footer>
     </div>
     <script src="./script.js"></script>
