avatar pop-up added

--- a/index.html
+++ b/index.html
@@ -69,6 +69,12 @@
         >
       </footer>
     </div>
+    <div id="popup" class="popup">
+      <img src="assets/avatar.png" alt="Full size image" />
+      <p id="closeButton" class="closeButton">
+        <ion-icon name="close-circle-outline"></ion-icon>
+      </p>
+    </div>
     <script src="./script.js"></script>
     <script
       type="module"
