added popup when clicking on avatar

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       </footer>
     </div>
     <div id="popup" class="popup">
-      <img src="assets/avatar.png" alt="Full size image" />
+      <img src="assets/avatar.png" alt="Avatar Pop-Up" />
       <p id="closeButton" class="closeButton">
         <ion-icon name="close-circle-outline"></ion-icon>
       </p>
