--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta property="og:title" content="Social Linking" />
-    <meta property="og:description" content="Social media link agregator" />
+    <meta
+      property="og:description"
+      content="Social link agregator, unite all your links whether they are from social media, work, portfolio..."
+    />
     <meta property="og:image" content="./assets/foguete.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
