--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
       property="og:description"
       content="Social link agregator, unite all your links whether they are from social media, work, portfolio..."
     />
-    <meta property="og:image" content="./assets/foguete.png" />
+    <meta
+      property="og:image"
+      content="https://media.discordapp.net/attachments/1107410105785405562/1109479733462311012/favicon.png"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
