--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <meta property="og:title" content="Social Linking" />
     <meta
       property="og:description"
@@ -13,6 +14,9 @@
       property="og:image"
       content="https://media.discordapp.net/attachments/1107410105785405562/1109479733462311012/favicon.png"
     />
+    <meta property="og:image:width" content="80" />
+    <meta property="og:image:height" content="80" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
