--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Social link agregator, unite all your links whether they are from social media, work, portfolio..."
+    />
 
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="" />
     <meta property="og:title" content="Social Linking" />
     <meta
       property="og:description"
@@ -12,10 +18,25 @@
     />
     <meta
       property="og:image"
-      content="https://media.discordapp.net/attachments/1107410105785405562/1109479733462311012/favicon.png"
+      content="https://media.discordapp.net/attachments/1107410105785405562/1109481249132785776/preview.jpg"
     />
-    <meta property="og:image:width" content="80" />
-    <meta property="og:image:height" content="80" />
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:domain"
+      content="g-soldera.github.io/social-linking"
+    />
+    <meta property="twitter:url" content="" />
+    <meta name="twitter:title" content="Social Linking" />
+    <meta
+      name="twitter:description"
+      content="Social link agregator, unite all your links whether they are from social media, work, portfolio..."
+    />
+    <meta
+      name="twitter:image"
+      content="https://media.discordapp.net/attachments/1107410105785405562/1109481249132785776/preview.jpg"
+    />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
