--- a/index.html
+++ b/index.html
@@ -18,11 +18,13 @@
     />
     <meta
       property="og:image"
-      content="https://media.discordapp.net/attachments/1107410105785405562/1109481249132785776/preview.jpg"
+      content="https://media.discordapp.net/attachments/1107410105785405562/1109485296673882222/logo.png"
     />
+    <meta property="og:image:height" content="80" />
+    <meta property="og:image:width" content="80" />
 
     <!-- Twitter Meta Tags -->
-    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:card" content="summary" />
     <meta
       property="twitter:domain"
       content="g-soldera.github.io/social-linking"
@@ -35,7 +37,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://media.discordapp.net/attachments/1107410105785405562/1109481249132785776/preview.jpg"
+      content="https://media.discordapp.net/attachments/1107410105785405562/1109485296673882222/logo.png"
     />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
