--- a/index.html
+++ b/index.html
@@ -97,10 +97,7 @@
         <a href="#" target="_blank">
           <ion-icon class="icon" name="logo-instagram"></ion-icon>
         </a>
-        <a
-          href="https://www.linkedin.com/in/gustavo-soldera-78624418a/"
-          target="_blank"
-        >
+        <a href="https://www.linkedin.com/in/g-soldera/" target="_blank">
           <ion-icon class="icon" name="logo-linkedin"></ion-icon>
         </a>
       </div>
