popup colors fix

--- a/index.html
+++ b/index.html
@@ -6,15 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Social link agregator, unite all your links whether they are from social media, work, portfolio..."
+      content="Social Linking is a versatile tool that allows you to create a customized page with links to your social media profiles and other resources."
     />
 
     <!-- Facebook Meta Tags -->
-    <meta property="og:url" content="" />
+    <meta
+      property="og:url"
+      content="https://g-soldera.github.io/social-linking"
+    />
     <meta property="og:title" content="Social Linking" />
     <meta
       property="og:description"
-      content="Social link agregator, unite all your links whether they are from social media, work, portfolio..."
+      content="Social Linking is a versatile tool that allows you to create a customized page with links to your social media profiles and other resources."
     />
     <meta
       property="og:image"
@@ -29,11 +32,14 @@
       property="twitter:domain"
       content="g-soldera.github.io/social-linking"
     />
-    <meta property="twitter:url" content="" />
+    <meta
+      property="twitter:url"
+      content="https://g-soldera.github.io/social-linking"
+    />
     <meta name="twitter:title" content="Social Linking" />
     <meta
       name="twitter:description"
-      content="Social link agregator, unite all your links whether they are from social media, work, portfolio..."
+      content="Social Linking is a versatile tool that allows you to create a customized page with links to your social media profiles and other resources."
     />
     <meta
       name="twitter:image"
@@ -59,7 +65,7 @@
       <div id="popup" class="popup">
         <img src="assets/avatar.png" alt="Avatar Pop-Up" />
         <p id="closeButton" class="closeButton">
-          <ion-icon name="close-circle-outline"></ion-icon>
+          <ion-icon name="close-outline"></ion-icon>
         </p>
       </div>
       <div id="switch" onclick="toggleMode()">
