added blur overlay on avatar popup

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
     <title>Social Linking</title>
   </head>
   <body>
+    <div class="overlay"></div>
     <div id="container">
       <div id="profile">
         <img id="avatar" src="./assets/avatar.png" alt="Avatar" />
