increased popup responsivity with media queries

--- a/index.html
+++ b/index.html
@@ -65,6 +65,15 @@
       </div>
       <div id="popup" class="popup">
         <img src="assets/avatar.png" alt="Avatar Pop-Up" />
+        <p class="text">
+          Hello! I'm a beginner web developer, passionate about turning ideas
+          into digital reality. With knowledge in HTML, CSS, and JavaScript, I
+          am excited to dive headfirst into this thrilling world of programming.
+          I am constantly seeking to learn and enhance my skills, as well as
+          tackling new challenges with enthusiasm. I am ready to collaborate,
+          contribute, and grow as part of a talented team, as we build the next
+          generation of web experiences together.
+        </p>
         <p id="closeButton" class="closeButton">
           <ion-icon name="close-outline"></ion-icon>
         </p>
