--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
       property="og:image"
       content="https://media.discordapp.net/attachments/1107410105785405562/1109485296673882222/logo.png"
     />
-    <meta property="og:image:height" content="80px" />
-    <meta property="og:image:width" content="80px" />
+    <meta property="og:image:height" content="80" />
+    <meta property="og:image:width" content="80" />
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary" />
