--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <a href="https://github.com/g-soldera" target="_blank">
           <ion-icon class="icon" name="logo-github"></ion-icon>
         </a>
-        <a href="#" target="_blank">
+        <a href="https://Instagram.com/gsoldera.dev" target="_blank">
           <ion-icon class="icon" name="logo-instagram"></ion-icon>
         </a>
         <a href="https://www.linkedin.com/in/g-soldera/" target="_blank">
