update URL to custom domain

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Facebook Meta Tags -->
     <meta
       property="og:url"
-      content="https://g-soldera.github.io/social-linking"
+      content="http://gsoldera.dev"
     />
     <meta property="og:title" content="Social Linking" />
     <meta
@@ -34,7 +34,7 @@
     />
     <meta
       property="twitter:url"
-      content="https://g-soldera.github.io/social-linking"
+      content="http://gsoldera.dev"
     />
     <meta name="twitter:title" content="Social Linking" />
     <meta
