--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Facebook Meta Tags -->
     <meta
       property="og:url"
-      content="http://gsoldera.dev"
+      content="https://g-soldera.github.io/social-linking/"
     />
     <meta property="og:title" content="Social Linking" />
     <meta
@@ -21,7 +21,7 @@
     />
     <meta
       property="og:image"
-      content="https://media.discordapp.net/attachments/1107410105785405562/1109485296673882222/logo.png"
+      content="https://cdn.discordapp.com/attachments/1109870440945565726/1110630094784970853/portfolioopengraphsociallinking.png"
     />
     <meta property="og:image:height" content="80" />
     <meta property="og:image:width" content="80" />
@@ -34,7 +34,7 @@
     />
     <meta
       property="twitter:url"
-      content="http://gsoldera.dev"
+      content="https://g-soldera.github.io/social-linking/"
     />
     <meta name="twitter:title" content="Social Linking" />
     <meta
@@ -43,7 +43,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://media.discordapp.net/attachments/1107410105785405562/1109485296673882222/logo.png"
+      content="https://cdn.discordapp.com/attachments/1109870440945565726/1110630094784970853/portfolioopengraphsociallinking.png"
     />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
