--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
       property="og:image"
       content="https://cdn.discordapp.com/attachments/1109870440945565726/1110630094784970853/portfolioopengraphsociallinking.png"
     />
-    <meta property="og:image:height" content="80" />
-    <meta property="og:image:width" content="80" />
+    <meta property="og:image:height" content="300" />
+    <meta property="og:image:width" content="300" />
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary" />
@@ -49,7 +49,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Abel&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./style.css" />
