scrollbar style + portfolio added

--- a/index.html
+++ b/index.html
@@ -85,6 +85,9 @@
       <div id="menu">
         <ul>
           <li>
+            <a href="https://www.gsoldera.dev" target="_blank">Portfolio</a>
+          </li>
+          <li>
             <a
               href="https://github.com/g-soldera/social-linking"
               target="_blank"
@@ -101,28 +104,35 @@
               >MIT License</a
             >
           </li>
-          <li>
-            <a href="https://www.rocketseat.com.br" target="_blank">DevLinks</a>
-          </li>
         </ul>
       </div>
       <div id="social-links">
-        <a href="https://github.com/g-soldera" target="_blank">
+        <a href="https://github.com/g-soldera" title="Github" target="_blank">
           <ion-icon class="icon" name="logo-github"></ion-icon>
         </a>
-        <a href="https://Instagram.com/gsoldera.dev" target="_blank">
+        <a
+          href="https://Instagram.com/gsoldera.dev"
+          title="Instagram"
+          target="_blank"
+        >
           <ion-icon class="icon" name="logo-instagram"></ion-icon>
         </a>
-        <a href="https://www.linkedin.com/in/g-soldera/" target="_blank">
+        <a
+          href="https://www.linkedin.com/in/g-soldera/"
+          title="LinkedIn"
+          target="_blank"
+        >
           <ion-icon class="icon" name="logo-linkedin"></ion-icon>
         </a>
-      </div>
-      <footer>
-        Feito durante o curso
-        <a href="https://app.rocketseat.com.br/devlinks" target="_blank"
-          >DevLinks</a
+        <a
+          href="https://app.rocketseat.com.br/devlinks"
+          title="RocketSeat"
+          target="_blank"
         >
-      </footer>
+          <ion-icon name="rocket-outline"></ion-icon>
+        </a>
+      </div>
+      <footer>&lt;/G-SOLDERA&gt;</footer>
     </div>
     <script src="./script.js"></script>
     <script
